fix: adjust font size of card name for better readability

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -39,7 +39,7 @@
   }
 }
 .card__name {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 500;
 }
 .card__brand {
